WIP(TpRpg): started implementing initiative based fights